# OSA_Ethernet_Project

./: .gitignore  DashApp.py  OsaMain.py  OsaMain2.py  README.md  app.py  metodos.py  plot_1.py  procesamiento1.py  pyproject.toml  visualizacion_refs.py
.junie/: IMAQ6370C-17EN.md  IMAQ6370D-01EN.md  changes_summary.md  guidelines.md  style_guide.md
.junie/session160625 revision codigo/: code_review.md
assets/: client_callbacks.js  custom.css  file_selector.js
callbacks/: __init__.py  osa_callbacks.py  update_graphs.py
components/: __init__.py  alerts.py  buttons.py  cards.py  forms.py  graphs.py
layouts/: __init__.py  index_template.py  main_layout.py
pages/: __init__.py  adquisicion_datos.py  home.py  preprocesamiento_visualizacion.py
utils/: __init__.py  data_processing.py  osa_connection.py
