[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["esteban <raulest50@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
openpyxl = "^3.1.5"

dash="^2.18.1"
dash_bootstrap_components="^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
